--- a/index.html
+++ b/index.html
@@ -9,12 +9,33 @@
     <meta name="keywords" content="Photovoltaic installations ecology energy poland ">
 
     <link rel="stylesheet" href="assets/css/style.css">
+
     <script src="https://kit.fontawesome.com/fe68b55391.js" crossorigin="anonymous"></script>
 
     <title>Synergia photovoltaic installations</title>
 </head>
 <body>
     <header>
+        <a href="index.html"></a>
         <h1>Synergia photovoltaic installations</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="#">Contact us</a>
+                </li>
+            </ul>
+            
+        </nav>
+        
     </header>
 </body>
+<header></header>
+<section>What is photovoltaic installation</section>
+<section>Benefits</section>
+<section>Costs</section>
