Add logo and bacground header image

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body>
     <header>
         <a href="index.html"></a>
+        <div id="synergia-logo"></div>
+        <img src="assests/images/synergialogo.png" alt="synergia-logo">
         <h1>Synergia photovoltaic installations</h1>
         <nav>
             <ul>
@@ -34,6 +36,9 @@
         </nav>
         
     </header>
+    <section>
+        <div id="solar-image"></div>
+    </section>
 </body>
 <header></header>
 <section>What is photovoltaic installation</section>
