--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Photovoltaic installations">
     <meta name="keywords" content="Photovoltaic installations ecology energy poland ">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assests/css/style.css">
+
 
     <script src="https://kit.fontawesome.com/fe68b55391.js" crossorigin="anonymous"></script>
 
@@ -17,29 +18,28 @@
 <body>
     <header>
         <a href="index.html"></a>
-        <div id="synergia-logo"></div>
+
+        <div class="wrapper">
+        <div class="solar-image"></div>
+        <div class="synergia-logo">
         <img src="assests/images/synergialogo.png" alt="synergia-logo">
-        <h1>Synergia photovoltaic installations</h1>
+        </div>
         <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="#">Gallery</a>
-                </li>
-                <li>
-                    <a href="#">Contact us</a>
-                </li>
+            <ul class="nav-area">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Contact us</a></li>
             </ul>
-            
         </nav>
-        
+        <div class="Welcome-text">
+            <h1>Synergia photovoltaic installations</h1>
+            <p>Convert free solar energy into electricity.</p>
+        </div>
+
+    </div>     
     </header>
-    <section>
-        <div id="solar-image"></div>
-    </section>
 </body>
+
 <header></header>
 <section>What is photovoltaic installation</section>
 <section>Benefits</section>
