Add style to navigation area and heading

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <a href="index.html"></a>
 
-        <div class="wrapper">
+        <div class="container">
         <div class="solar-image"></div>
         <div class="synergia-logo">
         <img src="assests/images/synergialogo.png" alt="synergia-logo">
