Add styling to Welcome text

--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
                 <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
-        <div class="Welcome-text">
-            <h1>Synergia photovoltaic installations</h1>
-            <p>Convert free solar energy into electricity.</p>
-        </div>
-
     </div>     
     </header>
+    <section id="Welcome-text">
+        <div id="Cover-text">
+            <h1>Synergia photovoltaic installations</h1>
+            <p>Convert free solar energy into electricity.<p>
+        </div>
+    </section>
 </body>
 
 <header></header>
