Add styling to images-gallery

--- a/gallery.html
+++ b/gallery.html
@@ -25,4 +25,5 @@
     <img src="assests/images gallery/7.jpg" alt="seven">
     <img src="assests/images gallery/8.jpg" alt="eight">
     <img src="assests/images gallery/9.jpg" alt="nine">
+    <img src="assests/images gallery/10.jpg" alt="ten">
 </section>
