Add styling to contact page, add header to contact and galley page

--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,17 @@
 
     <title>Synergia photovoltaic installations</title>
 </head>
+<div class="hearder">
+    <nav>
+     <ul class="nav-area">
+         <li><a href="index.html">Home</a></li>
+         <li><a href="gallery.html">Gallery</a></li>
+         <li><a href="contact.html">Contact us</a></li>
+     </ul>
+     <div class="synergia-logo"><img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo"></div>
+    </nav>
+</div>
+
 <section id="images-gallery">
     <img src="assests/images gallery/1.jpg" alt="one">
     <img src="assests/images gallery/2.jpg" alt="two">
