Add styling to contact page

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 <span> Tape your Message...</span>
 </div>
 <div class="inputBox">
-    <input tyoe="submit" name="" value="Send">
+    <input type="submit" name="" value="Send">
 </div>
 
 
