--- a/contact.html
+++ b/contact.html
@@ -16,49 +16,30 @@
     <title>Synergia photovoltaic installations</title>
 </head>
 
-<div class="hearder">
-<nav>
- <ul class="nav-area">
-<li><a href="index.html">Home</a></li>
-<li><a href="gallery.html">Gallery</a></li>
-<li><a href="contact.html">Contact us</a></li>
-</ul>
-<div class="synergia-logo"><img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo"></div>
-</nav>
-</div>
-
+<body>
+    <div class="hearder">
+           <nav>
+            <ul class="nav-area">
+                <li>
+                <a href="index.html" class="active">Home</a></li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact us</a>
+                </li>
+            </ul>
+            <div class="logo"><img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo"></div>
+           </nav>
+    </div>
+    
 <section class="contact">
 <div class="content">
     <h2>Contact us</h2>
     <p>If you are interested in installing photovoltaic installations or have any questions, please don't hesitate to contact us.
     We will get in touch with you within 24 hours.</p>
 </div>
-<div class="case">
-    <div class="contactInfo">
-        <div class="box">
-            <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
-            <div class="text">
-                <h3>Address</h3>
-                <p>Kolano 60,<br>21-205 Kolano,<br>Poland</p>
-            </div>
 
-        </div>
-        <div class="box">
-            <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
-            <div class="text">
-                <h3>Phone</h3>
-                <p>+48502048386</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-            <div class="text">
-                <h3>Email</h3>
-                <p>sebastian.mat@gmail.com</p>
-            </div>
-
-        </div>
-    </div>
     <div class="contactForm">
         <form>
             <h2>Send Message</h2>
@@ -73,10 +54,6 @@
 <div class="inputBox">
 <input type="text" name="" required="requeired">
 <span>Email</span>
-</div>
-<div class="inputBox">
-<textarea required="required"></textarea>
-<span> Tape your Message...</span>
 </div>
 <div class="inputBox">
     <input type="submit" name="" value="Send">
