Add a new section to main page, add styling, add content to contact page, ad styling

--- a/contact.html
+++ b/contact.html
@@ -17,21 +17,22 @@
 </head>
 
 <body>
-    <div class="hearder">
-           <nav>
-            <ul class="nav-area">
-                <li>
-                <a href="index.html" class="active">Home</a></li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact us</a>
-                </li>
-            </ul>
-            <div class="logo"><img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo"></div>
-           </nav>
+    <nav>
+        <img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo" class="logo">
+        <div class="nav-links">
+        <ul class="nav-area">
+            <li>
+            <a href="index.html" class="active">Home</a></li>
+            <li>
+                <a href="gallery.html">Gallery</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact us</a>
+            </li>
+        </ul>
     </div>
+       
+    </nav>
     
 <section class="contact">
 <div class="content">
@@ -58,14 +59,38 @@
 <div class="inputBox">
     <input type="submit" name="" value="Send">
 </div>
-
-
-
             </div>
         </form>
     </div>
 </div>
 </section>
+
+<section id="down">
+<div class="personal_info">
+    <div class="contact_details">
+        <div class="box">
+            <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+            <div class="text">
+                <h3>Address</h3>
+                <p>Kolano 60,<br>21-205 Kolano,<br>Poland</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+            <div class="text">
+                <h3>Phone</h3>
+                <p>+48502048386</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+            <div class="text">
+                <h3>Email</h3>
+                <p>sebastian.mat@gmail.com</p>
+            </div>
+
+        </section>
+
 
 
 
