--- a/gallery.html
+++ b/gallery.html
@@ -16,21 +16,22 @@
     <title>Synergia photovoltaic installations</title>
 </head>
 <body>
-    <div class="hearder">
-           <nav>
-            <ul class="nav-area">
-                <li>
-                <a href="index.html" class="active">Home</a></li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contact us</a>
-                </li>
-            </ul>
-            <div class="logo"><img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo"></div>
-           </nav>
+    <nav>
+        <img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo" class="logo">
+        <div class="nav-links">
+        <ul class="nav-area">
+            <li>
+            <a href="index.html" class="active">Home</a></li>
+            <li>
+                <a href="gallery.html">Gallery</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact us</a>
+            </li>
+        </ul>
     </div>
+       
+    </nav>
     
 
 <section id="images-gallery">
