--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <a href="index.html" id="active" class="navlink" aria-label="Go to the Home page ">Home</a>
             </li>
             <li>
-            <a href="photovaltaic.html" class="navlink" aria-label="Go to the Projects page">Photovoltaic-Installations</a>
+            <a href="photovaltaic.html" class="navlink" aria-label="Go to the Photovoltaic page">Photovoltaic-Installations</a>
             </li>
             <li>
-                <a href="gallery.html" class="navlink" aria-label="Go to the Projects page">Gallery</a>
+                <a href="gallery.html" class="navlink" aria-label="Go to the Gallery page">Gallery</a>
                 </li>
             <li>
                 <a href="contact.html" class="navlink" aria-label="Go to the Contact page">Contact</a>
