Add update to heade on all pages

--- a/contact.html
+++ b/contact.html
@@ -20,27 +20,27 @@
     <span id="totop"></span>
     <header>
         <div id="head">
-            <a href="index.html" aria-label="Go to the home page">
-            <img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo" class="logo">
-            </a>
-            <!--Navigation area-->
-        <nav>
-            <ul id="nav-area">
-                <li>
-                    <a href="index.html" id="active" class="navlink" aria-label="Go to the Home page ">Home</a>
+        <a href="index.html" aria-label="Go to the home page">
+        <img src="assests/images/SYNERGIA_LOGO_BIG.png" alt="synergia-logo" class="logo">
+        </a>
+        <!--Navigation area-->
+    <nav>
+        <ul id="nav-area">
+            <li>
+                <a href="index.html" id="active" class="navlink" aria-label="Go to the Home page ">Home</a>
+            </li>
+            <li>
+            <a href="photovaltaic.html" class="navlink" aria-label="Go to the Photovoltaic page">Photovoltaic-Installations</a>
+            </li>
+            <li>
+                <a href="gallery.html" class="navlink" aria-label="Go to the Gallery page">Gallery</a>
                 </li>
-                <li>
-                <a href="photovaltaic.html" class="navlink" aria-label="Go to the Projects page">Photovoltaic-Installations</a>
-                </li>
-                <li>
-                    <a href="gallery.html" class="navlink" aria-label="Go to the Projects page">Gallery</a>
-                    </li>
-                <li>
-                    <a href="contact.html" class="navlink" aria-label="Go to the Contact page">Contact</a>
-                </li>
-            </ul>
-        </nav>
-            </div>
+            <li>
+                <a href="contact.html" class="navlink" aria-label="Go to the Contact page">Contact</a>
+            </li>
+        </ul>
+    </nav>
+        </div>
     </header>
     
 <section class="contact">
