Add section one to photovoltaic page

--- a/photovaltaic.html
+++ b/photovaltaic.html
@@ -36,28 +36,27 @@
 </nav>
     </div>
 </header>
+<br>
 <section id="whatIs">
     <h1>What is Photovoltaic</h1>
+    <div id="whatIs_text">
     <br>
-    
     <p>Photovoltaics is a technology that allows for environmentally safe conversion of solar energy into electricity. 
-    <p>Photovoltaic installations allow for significant savings on electricity bills. The generated energy can be used on an ongoing basis, stored or resold to the power company.</p>
-
-    <p>Photovoltaic panels are one of the Renewable Energy Sources. These types of installations produce clean energy without polluting the environment. They also do not generate additional costs, which is an undoubted advantage in terms of investment.</p>
-    <p>Solar panels are extremely durable and trouble-free. There is almost no risk of failure in the installation and their 100% service life is estimated at 25 years. 
+    Photovoltaic installations allow for significant savings on electricity bills. The generated energy can be used on an ongoing basis, stored or resold to the power company.
+    Photovoltaic panels are one of the Renewable Energy Sources. These types of installations produce clean energy without polluting the environment. They also do not generate additional costs, which is an undoubted advantage in terms of investment.
+    Solar panels are extremely durable and trouble-free. There is almost no risk of failure in the installation and their 100% service life is estimated at 25 years. 
     After this period, the photovoltaic panels will still be in excellent condition and their efficiency will oscillate around 80%.</p>
-  </section>
+</div>
+<div id="photo_one">
+<img src="assests/images/pixabay 1.jpg"  width="600" height="350" style="border-radius: 10px;" alt="pannels">
+</div>
+</section>
   
-  <section id="PhotoTwo">
-    <img src="assests/images/pixabay 1.jpg" alt="pannels">
-  </section>
-
   <section id="Benefits">
-    <section id="benefits"><div id="benefits"></div>
-
-        <h1 class>Why is it worth investing in a photovoltaic installation?</h1>
-
-        <ul><li>Lower electricity bills</li><br>
+    <h1>Why is it worth investing in a photovoltaic installation?</h1>
+    <div id="reasons_why">
+        <ul>
+        <li>Lower electricity bills</li><br>
 
         <p>Our electricity bills become lower thanks to the production of our own electricity from a photovoltaic installation, which gives us greater independence from electricity suppliers and from increases in energy prices, including the costs of its distribution.</p><br>
 
@@ -78,20 +77,24 @@
         <li>Fast panel assembly and easy maintenance</li><br>
 
         <p>Installation of a photovoltaic installation takes 2 to 3 days. The entire energy production and transmission process is fully automated. In case of any problem, the inverter included in the installation is able to notify us about it. The installation in an inclined position is cleaned by rain, but if necessary, you can do it yourself without the need to hire specialists.</p></ul><br>
-  
+        </div>
+        <div id=photo_two>
+        <img src="assests/images/Photo two.jpg"  width="600" height="400" style="border-radius: 10px;" alt="installation">
+        </div>
+        <div id="photo_three">
+            <img src="assests/images/Photo 3.jpg"  width="600" height="400" style="border-radius: 10px;" alt="pannels">
+            </div>
     </section>
-  <section id="PhotoThree">
-    <img src="assests/images/2 freepeek finansowa.jpg" alt="savings">
-  </section>
 
-  
-<section id="costs">
 
-<h1>Installation and equipment cost</h1>
+  <section id="CostsOfInstalation">
+    <h1>Installation and equipment cost</h1>
+
+<div id="costs">
 <br>
-<h2>Various aid programs have been operating in Poland for many years. Importantly, there are subsidies that will cover up to 60% of the costs of a  photovoltaic installation. </h2>
+<h3>Various aid programs have been operating in Poland for many years. Importantly, there are subsidies that will cover up to 60% of the costs of a  photovoltaic installation. </h3>
 <br>
-<h3>The following components affect the installation cost:</h3>
+<h4>The following components affect the installation cost:</h4>
 <br>
 
 <ul>
@@ -113,6 +116,10 @@
 Please contact us if you need assistance in obtaining an accurate photovoltaic quote for your needs.</em>
 </p>
 </ul>
+</div>
+<div id="Photo_four">
+<img src="assests/images/2 freepeek finansowa.jpg" width="550" height="500" style="border-radius: 10px" alt= "savings">
+</div>
 </section>
 
 <!--Footer section-->
