--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <a href="index.html" id="active" class="navlink" aria-label="Go to the Home page ">Home</a>
             </li>
             <li>
-            <a href="photovaltaic.html" class="navlink" aria-label="Go to the Photovoltaic page">Photovoltaic-Installations</a>
+            <a href="photovaltaic.html" class="navlink" aria-label="Go to the Projects page">Photovoltaic-Installations</a>
             </li>
             <li>
-                <a href="gallery.html" class="navlink" aria-label="Go to the Gallery page">Gallery</a>
+                <a href="gallery.html" class="navlink" aria-label="Go to the Projects page">Gallery</a>
                 </li>
             <li>
                 <a href="contact.html" class="navlink" aria-label="Go to the Contact page">Contact</a>
@@ -79,7 +79,7 @@
             </div>
             <div class="description">
         <div id="owner-image">
-            <img src="assests/images/Owner photo.png" alt="A photo of the owner">
+            <img src="assests/images/Owner photo.png" width="300" height="350" style="border-radius: 10px;" alt="A photo of the owner">
         </div>
             </div>
         </div>
