Add media query to main page

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
 
          <!--About-us-->
     <section id="about-company" aria-labelledby="about-text owner-image">
+        <div id="description">
         <h2>About Us</h2>
-        <div id="rows">
-            <div class="description">
+        <div id="owner-image">
+            <img src="assests/images/Owner photo.png" width="300" height="350" style="border-radius: 10px;" alt="A photo of the owner">
+        </div>
         <div id="about-text">
             <p>Synergy is a family-run business, established in 2020 that prides itself on high standards of service, care, and customer experience.
- <br>
+                <br>
                 I am an electrician and a certified renewable energy installer.
                 I founded this company setting up photovoltaic installations due to my interest in renewable energy sources and work experience acquired in Germany and Switzerland, where I worked for many years.
                 <br>
@@ -69,20 +71,14 @@
                 
                 Running a small family business has the advantage of direct contact between the ordering party and the contractor, where the client will not be sent to the hotline, and will certainly get answers to the questions he is interested in.
                 In my work as an installer, the most important for me is the quality of workmanship and customer satisfaction.
-                <br>
-                </p>
-                <p>For more information on solar installation and pricing, <span id="info-link"><a aria-label="Go to the Contact page" href="photovaltaic.html" style="text-decoration:none"><strong>click here</strong></a></span>.
-                </p>
+                 </p>
                 <p>
+            For more information on solar installation and pricing, <span id="info-link"><a aria-label="Go to the Contact page" href="photovaltaic.html" style="text-decoration:none"><strong>click here</strong></a></span>.
+            <br>
+                
                 <span id="contact-link"><a aria-label="Go to the Contact page" href="contact.html" style="text-decoration:none"><strong>Get in touch</strong></a></span> if you have any additional questions, or if you would like to get a personal price estimation.</p>
         </div>
-            </div>
-            <div class="description">
-                <div id="owner-image">
-                    <img src="assests/images/Owner photo.png" width="300" height="350" style="border-radius: 10px;" alt="A photo of the owner">
-                </div>
-            </div>
-        </div>
+    </div>
     </section>
 <!--Footer section-->
     <footer>
