Add Features content to Read me File

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img src="assests/images/Owner photo.png" width="300" height="350" style="border-radius: 10px;" alt="A photo of the owner">
         </div>
         <div id="about-text">
-            <p>Synergy is a family-run business, established in 2020 that prides itself on high standards of service, care, and customer experience.
+            <p>Synergia is a family-run business, established in 2020 that prides itself on high standards of service, care, and customer experience.
                 <br>
                 I am an electrician and a certified renewable energy installer.
                 I founded this company setting up photovoltaic installations due to my interest in renewable energy sources and work experience acquired in Germany and Switzerland, where I worked for many years.
