Add photos to read me file

--- a/contact.html
+++ b/contact.html
@@ -83,9 +83,9 @@
     <h2>Address</h2>
 <div id="contact_box">    
     <ul>
-        <li title="Address">Kolano 74,<br>21-205 Kolano,<br>Poland</li>
+        <li title="Address">Kolano,<br>21-205 Kolano,<br>Poland</li>
 <br>
-        <li title="Phone">+44 123 456 789</li>
+        <li title="Phone">+48 123 456 789</li>
 <br>
         <li title="Send e-mail">sebastian.mat@gmail.com
             <a class="email-icon" href= "mailto:kamila.mate82@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Click here to send an e-mail"><i id="email-icon" class="fas fa-envelope"></i></a>
