--- a/contact.html
+++ b/contact.html
@@ -104,18 +104,20 @@
     <footer>
         <div class="footer">
             <a href="#totop" id="up-arrow" aria-label="Scroll to top"><i id="arrow" class="fas fa-arrow-up"></i></a>
-
+        <div id="social">
             <ul class="social_network">
-        <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-f socials"></i></a></li>
+        <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page"><i class="fab fa-facebook-f socials"></i></a></li>
 
         <li><a href="https://twitter.com" target="_blank" rel="noopener"
             aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
 
-        <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab")><i class="fab fa-instagram"></i></a></li>
-        <h3>Copyright Synergia 2019</h3>
-                    </ul>    
+        <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page"><i class="fab fa-instagram"></i></a></li>
+            </ul>   
+            <h3>Copyright Synergia 2019</h3>
+        </div> 
     </div>
     </footer>
+</body>
 
 
 
