--- a/index.html
+++ b/index.html
@@ -81,21 +81,22 @@
     </div>
     </section>
 <!--Footer section-->
-    <footer>
-        <div class="footer">
-            <a href="#totop" id="up-arrow" aria-label="Scroll to top"><i id="arrow" class="fas fa-arrow-up"></i></a>
+<footer>
+    <div class="footer">
+        <a href="#totop" id="up-arrow" aria-label="Scroll to top"><i id="arrow" class="fas fa-arrow-up"></i></a>
+    <div id="social">
+        <ul class="social_network">
+    <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page"><i class="fab fa-facebook-f socials"></i></a></li>
 
-            <ul class="social_network">
-        <li><a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook-f socials"></i></a></li>
+    <li><a href="https://twitter.com" target="_blank" rel="noopener"
+        aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
 
-        <li><a href="https://twitter.com" target="_blank" rel="noopener"
-            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
-
-        <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab")><i class="fab fa-instagram"></i></a></li>
+    <li><a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page"><i class="fab fa-instagram"></i></a></li>
+        </ul>   
         <h3>Copyright Synergia 2019</h3>
-                    </ul>    
-    </div>
-    </footer>
+    </div> 
+</div>
+</footer>
     
     </body>
     
