--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
  <!--Contact us Map-->
 
 <div id="map">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2474.8609610619396!2d23.039265!3d51.662382!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47222c2ab8955a91%3A0xa4690218d599cbf1!2sKolano%2074%2C%2021-205%20Kolano%2C%20Polska!5e0!3m2!1spl!2sde!4v1681995899240!5m2!1spl!2sde" width="600" height="350" style="border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32802.42422472419!2d23.085194778849665!3d51.681767471585204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47222c3d3fef6189%3A0x4f8192bce46a8df7!2s21-205%20Kolano%2C%20Polska!5e0!3m2!1spl!2sde!4v1686563094846!5m2!1spl!2sde" width="600" height="390" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="350" style="border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>  
 </section>
     
