Add debugging to owner photo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="description">
         <h2>About Us</h2>
         <div id="owner-image">
-            <img src="assests/images/Owner photo.png" width="300" height="350" style="border-radius: 10px;" alt="A photo of the owner">
+            <img src="assests/images/Owner_photo.png" width="300" height="350" style="border-radius: 10px;" alt="A photo of the owner">
         </div>
         <div id="about-text">
             <p>Synergia is a family-run business, established in 2020 that prides itself on high standards of service, care, and customer experience.
