Add bug fixes in the organization of the text from the photovoltaic page

--- a/photovaltaic.html
+++ b/photovaltaic.html
@@ -45,7 +45,7 @@
 
     <div class="row">
     <div class="whatIs-col">
-        <img src="assests/images/pixabay _1.jpg"  width="600" height="460" style="border-radius: 10px;" alt="pannels">
+        <img src="assests/images/pixabay_1.jpg"  width="600" height="460" style="border-radius: 10px;" alt="pannels">
     </div>
 
     <div class="whatIs-col">
@@ -83,10 +83,11 @@
         <br>
         <p>Solar energy is a renewable energy source. This means you have unlimited access to it.</p>
         </li>
+        </ul>
         </div>
-
         </div>
     </div>
+  </section>
 
 <section id="Benefits2">
 <div class="row">
@@ -122,10 +123,10 @@
 </section>
 
 <section id="CostsOfInstalation">
-<h1>Installation and equipment cost</h1>
+<h2>Installation and equipment cost</h2>
 <div class="row">
 <div class="whatIs-col">
-<img src="assests/images/2_freepeek _finansowa.jpg" width="550" height="600" style="border-radius: 10px" alt= "savings">
+<img src="assests/images/2_freepeek_finansowa.jpg" width="550" height="600" style="border-radius: 10px" alt= "savings">
 </div>
 
 <div class="whatIs-col">
@@ -164,6 +165,7 @@ Please contact us if you need assistance in obtaining an accurate photovoltaic q
 </p>
 </li>
 </ul>
+</div>
 </div>
 </div>
 
