Add a bug fix to the image names on the gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -41,20 +41,20 @@
     </nav>
         </div>
     </header>
-
+<div class="photos">
 <section id="images-gallery">
-    <img src="assests/images gallery/1.jpg" alt="one">
-    <img src="assests/images gallery/2.jpg" alt="two">
-    <img src="assests/images gallery/3.jpg" alt="three">
-    <img src="assests/images gallery/4.jpg" alt="four"> 
-    <img src="assests/images gallery/5.jpg" alt="five"> 
-    <img src="assests/images gallery/6.jpg" alt="six"> 
-    <img src="assests/images gallery/7.jpg" alt="seven">
-    <img src="assests/images gallery/8.jpg" alt="eight">
-    <img src="assests/images gallery/9.jpg" alt="nine">
-    <img src="assests/images gallery/10.jpg" alt="ten">
+    <img src="assests/images_gallery/1.jpg" alt="one">
+    <img src="assests/images_gallery/2.jpg" alt="two">
+    <img src="assests/images_gallery/3.jpg" alt="three">
+    <img src="assests/images_gallery/4.jpg" alt="four"> 
+    <img src="assests/images_gallery/5.jpg" alt="five"> 
+    <img src="assests/images_gallery/6.jpg" alt="six"> 
+    <img src="assests/images_gallery/7.jpg" alt="seven">
+    <img src="assests/images_gallery/8.jpg" alt="eight">
+    <img src="assests/images_gallery/9.jpg" alt="nine">
+    <img src="assests/images_gallery/10.jpg" alt="ten">
 </section>
-
+</div>
 <!--Footer section-->
 <footer>
     <div class="footer">
