Add the removed error to the map name on contact page

--- a/contact.html
+++ b/contact.html
@@ -84,10 +84,10 @@
     <h2>Address</h2>
 <div id="contact_box">    
     <ul>
-        <li title="Address">Kolano,<br>21-205 Kolano,<br>Poland</li>
-<br>
-        <li title="Phone">+48 123 456 789</li>
-<br>
+        <li title="Address">Kolano,<br>21-205 Kolano,<br>Poland<br></li>
+
+        <li title="Phone">+48 123 456 789<br></li>
+
         <li title="Send e-mail">sebastian.mat@gmail.com
             <a class="email-icon" href= "mailto:kamila.mate82@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Click here to send an e-mail"><i id="email-icon" class="fas fa-envelope"></i></a>
         </li>
@@ -96,7 +96,7 @@
  <!--Contact us Map-->
 
 <div id="map">
-     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32802.42422472419!2d23.085194778849665!3d51.681767471585204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47222c3d3fef6189%3A0x4f8192bce46a8df7!2s21-205%20Kolano%2C%20Polska!5e0!3m2!1spl!2sde!4v1686563094846!5m2!1spl!2sde" width="600" height="390" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" width="600" height="350" style="border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32802.42422472419!2d23.085194778849665!3d51.681767471585204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47222c3d3fef6189%3A0x4f8192bce46a8df7!2s21-205%20Kolano%2C%20Polska!5e0!3m2!1spl!2sde!4v1686563094846!5m2!1spl!2sde" width="600" height="390" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>  
 </section>
     
