--- a/gallery.html
+++ b/gallery.html
@@ -41,8 +41,8 @@
     </nav>
         </div>
     </header>
-<div class="photos">
-<section id="images-gallery">
+
+<div id="images-gallery">
     <img src="assests/images_gallery/1.jpg" alt="one">
     <img src="assests/images_gallery/2.jpg" alt="two">
     <img src="assests/images_gallery/3.jpg" alt="three">
@@ -53,8 +53,8 @@
     <img src="assests/images_gallery/8.jpg" alt="eight">
     <img src="assests/images_gallery/9.jpg" alt="nine">
     <img src="assests/images_gallery/10.jpg" alt="ten">
-</section>
 </div>
+
 <!--Footer section-->
 <footer>
     <div class="footer">
