Add new section to gallry photos

--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
     </nav>
         </div>
     </header>
-
+<section id="gallery_photos">
 <div id="images-gallery">
     <img src="assests/images_gallery/1.jpg" alt="one">
     <img src="assests/images_gallery/2.jpg" alt="two">
@@ -54,7 +54,7 @@
     <img src="assests/images_gallery/9.jpg" alt="nine">
     <img src="assests/images_gallery/10.jpg" alt="ten">
 </div>
-
+</section>
 <!--Footer section-->
 <footer>
     <div class="footer">
