Add validation from LightHouse to Testing file

--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
     </header>
     <!--Hero Image-->
     <section id="mainImage">
-        <div id="hero-image"></div>
+        <div id="hero-image">
+        </div>
+
         <div id="welcome-text">
             <h1>Synergia photovoltaic installations</h1>
             <br>
             <p>Convert free solar energy into electricity<p>
-                <a href="contact.html" class="buton">Contact us to know more</a>
+            <a href="contact.html" class="buton">Contact us to know more</a>
         </div>
     </section>
 
